# easy-mcp

./: README.md  main.py  mcp_demo.json  pyproject.toml  server_tools.py  start_mcp.py
doc/: mcp_client.py  mcp_server.py
